# gilgamesh_service_local

./: .coverage  .dockerignore  .gitignore  AI_VIDEO_COMPILATION_PIPELINE.md  AI_VIDEO_COMPILATION_PIPELINE_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_MERMAID.md  CHANGELOG.md  DOCKER_TESTING_GUIDE.md  DOCUMENTATION_TEMPLATE.md  Dockerfile  Massive_refactor.md  PHASE1_DOC1_ENVIRONMENT_CONFIGURATION.md  PHASE1_DOC2_PROJECT_STRUCTURE_DEPENDENCIES.md  PROJECT_REWRITE_PLAN.md  PROJECT_VISION.md  README.md  add_vectorization_tracking.sql  ai_compilation_test_results.json  analyze_and_optimize_search.py  analyze_qdrant_collections.py  audit_missing_scene_descriptions.py  check_migration_videos.py  clear_test_data.py  create_generated_videos_table.sql  create_simple_videos_table.sql  create_video_clips_table.sql  curl_commands.md  debug_migration_query.py  demo_complete_pipeline.py  deploy.sh  docker-compose.portainer.yml  docker-compose.yml  downloader.py  dry_run_single_migration.py  dump.rdb  env.example  env.portainer.example  force_qdrant_indexing.py  get_table_info.sql  (+42 more)
app/: ai_rate_limiter.py  ai_requirements_generator.py  ai_scene_analysis.py  ai_script_generator.py  audio_generator.py  audio_processor.py  cache.py  cleanup.py  clip_operations.py  clip_storage.py  compilation_search.py  database.py  db_connections.py  db_operations.py  downloader.py  downloaders.py  generated_video_operations.py  main.py  media_utils.py  migration_tools.py  ocr_utils.py  scene_detection.py  service.py  simple_db_operations.py  simple_unified_processor.py  stitch_scenes.py  (+9 more)
(+49 files in other folders)
